{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "3a2607f5-52b4-4188-92ec-a92030a27d3b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "cd4a73b8-fc8d-4df7-a576-af951165f1c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LightAttack1",
                    "type": "Button",
                    "id": "306530b3-419f-4e00-9ed7-fa9d08bfc61c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LightAttack2",
                    "type": "Button",
                    "id": "dd3c1335-34e6-4c29-b78e-81efb68d877c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAttack1",
                    "type": "Button",
                    "id": "00e2251e-7ef3-40e0-9ed9-25f66d7e98ed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAttack2",
                    "type": "Button",
                    "id": "2b2e19c1-d875-4b31-a4c6-e0975d8d8045",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LevelUp",
                    "type": "Button",
                    "id": "3c005ace-0afd-4e42-a6e5-9e484daea6ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Die",
                    "type": "Button",
                    "id": "65d4915d-d2d8-469a-a93c-34450b8cbd03",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3c1d3337-057a-4660-ada2-65f61a1aa15f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "17cc8dfe-39c3-4ae6-8070-9e4ccf7ad5c3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "95bd0ebf-200e-467d-aeef-c8d15133a7e7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9206563c-0f68-468c-89c1-e40d7e11f6f2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "54f34a68-3cb5-4f3e-850e-7f59d50d7cba",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "14605974-562a-46f4-aaeb-e24efe4d33a9",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "LightAttack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "312bea1b-5f31-4547-b35b-9f47f3b9dd52",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "LightAttack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7228fa34-4370-4070-9349-0347ea024125",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "HeavyAttack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cad452e-5fb9-46a2-9245-712b8f84a412",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "HeavyAttack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b10134d-0ccb-465f-bf21-8c2c10d9b527",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "LevelUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "737e804e-8fcd-428c-b886-134decaab3f4",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Die",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}